(This file, CHANGES, lists fixes. See NEWS for new features and enhancements.)

2.4

  * CLOSEDOC and QUIT (^Q and Alt-Q) now close string requesters just like Esc.

2.3

  * Fixed ridiculously old bug when copying a block and the marker is
    after the cursor.
    
  * Tweak to syntax file for java.

  * Changed build date in "About" to ISO YYYY-MM-DD format.
  
  * Tweak suspend to signal process group; reduce chance of apparent hang.

  * Instantaneous window resize works again.

  * Now we display an error message (instead of crashing or returning an
    I/O error) when a file is too large (>=2GiB).

  * We no longer set the buffer filename in case of I/O error.

2.2

  * Fixed memory allocation macros in regex code from glibc to work on systems
    that return NULL on zero-sized allocations.

  * In makefile, made explicit the dependencies for regex.o.

  * Fixed bug in "AdjustView R" that could push current character off screen.

  * Ensure tab size remains less than half the window width when the window
    changes size.

  * Fixed buggy out-of-memory handling when loading files.
  
  * Fixed buggy HTML/CSS syntax highlighting.

  * Fixed wrong background line colour when clearing to the end of line.
  
  * ToUpper and ToLower now stop when they reach the end of a document.

2.1

  * Fixed efficiency bug introduced with syntax highlighting: ne should now
    be much more responsive along slow connections.

  * Fixed old, bad, shameful bug: complex assertions were compiled into
    the code even for the non-debug version. As a result, ne was deadly
    slow on large files.

  * Fixed small mistakes in the keyboard sequences displayed in the menus,
    and small discrepancies between default.keys/default.menus and reality
    (thanks to John Gabriele for having pointed out this).

  * In some cases after a keyboard timeout an ESC character was left in
    the keyboard buffer, causing weird behaviours.
