@@ -79,6 +79,7 @@ enum error {
 	CLIP_DOESNT_EXIST,
 	MARK_OUT_OF_BUFFER,
 	CANT_OPEN_MACRO,
+	MAX_MACRO_DEPTH_EXCEEDED,
 	FILE_IS_READ_ONLY,
 	FILE_IS_MIGRATED,
 	FILE_IS_DIRECTORY,
